# citytracker

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
citytracker/: .gitignore  README.md  pyproject.toml
citytracker/docs/: housing cols.txt
docs/: styles.css
docs/images/: Flag_of_New_York_City.ai  Zohran-Website-Quote-Housing.ai
docs/reference-information/: styles.css
notebooks/: citytracker.py  nyc_dashboard.py
